--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="container">
             <div class="promo_main">
                 <div class="promo_text">
-                    <h1 class="promo__header">Отримай <span>180+ балів</span> на ЗНО 2021 <span>не виходячи з дому</span></h1>
+                    <h1 class="promo__header ">Отримай <span>180+ балів</span> на ЗНО 2021 <span>не виходячи з дому</span></h1>
                     <div class="promo_list">
                         <ul class="promo_list-first">
                             <li><span>Гарантовано отримай 180+ балів на ЗНО за договором оферти233</span></li>
@@ -52,80 +52,20 @@
                         </ul>
                         <ul class="promo_list-second">
                             <li><span>Від теорії до теорії разом з викладачами практиками</span></li>
-                            <li><span>Економія грошей разом з нами. За рік ви зекономите понад 20.000 грн, а ваша дитина отримує відмінний результат</span></li>
+                            <li><span>За рік ви зекономите понад 20.000 грн, а ваша дитина отримує відмінний результат</span></li>
                         </ul>
                     </div>
                 </div>
-                <div class="form">
-                    <div class="form_descr">Залиш свої контактнi даннi</div>
+                <div class="form promo__form">
+                    <div class="promo__form_descr">Залиш свої контактнi даннi</div>
                     <form id="promo-form" class="feed-form" action="#">
                         <input name="name" placeholder="Ваше iм'я" type="text">
                         <input name="phone" placeholder="Ваш телефон">
 
-                        <button data-modal class="button button_submit">Отримати консультацiю</button>
-                        <span>*нас обрали 3159 абітурієнтiв за 2019-2020 рiк</span>
+                        <button class="button button_submit">Отримати консультацiю</button>
+                        <div class="promo__form_left ">*<span>нас обрали 3159 абітурієнтiв за 2019-2020 рiк</span></div>
                     </form>
             </div>
-            </div>
-        </div>
-    </section>
-
-    <section class="about">
-        <div class="container">
-            <h1>З нами навчаються учнi зi всiєї Україны</h1>
-            <h3 class="about__h3">Навайся та виконуй домашнi завдання без помилок за три кроки</h3>
-            <div class="about__tabs">
-                <div class="about__tab ">Шаг 1</div>
-                <div class="about__tab">Шаг 2</div>
-                <div class="about__tab about__tab_active">Шаг 3</div>
-            </div>
-            <div class="about__content">
-                <img class="about__content_img" src="img/photo/learn.jpg">
-                <div class="about__content_main">
-                    <div class="wrapper">
-                        <div class="about__content_maindescr">
-                            <img src="icons/about/youtube.svg">
-                            дивись теорію і розбір завдань
-                        </div>
-                        <div class="about__content_descr">
-                            Дивись теорію і завдання від наших викладачів на телефоні, комп’ютері або планшеті з будь-якого місця.
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="about__content">
-                <img class="about__content_img" src="img/photo/hand.jpg">
-                <div class="about__content_main">
-                    <div class="wrapper">
-                        <div class="about__content_maindescr">
-                            <img src="icons/about/chek.svg">
-                            Засвой отриманнi знання тестом
-                        </div>
-                        <div class="about__content_descr">
-                            Після заняття відразу переходь до практичних завдань на реальних тестах ЗНО та тестах, які розробляли наші викладачі.
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="about__content">
-                    <img class="about__content_img" src="img/photo/rules.jpg">
-                    <div class="about__content_main">
-                        <div class="wrapper">
-                            <div class="about__content_maindescr">
-                                <img src="icons/about/review.svg">
-                                Чому 94% учнів неефективно готуються до ЗНО?
- 
-                            </div>
-                            <div class="about__content_descr">
-                                <ul>
-                                    <li>Не можуть побороти свою лінь</li>
-                                    <li>Постійно відволікаються на заважаючі речі</li>
-                                    <li>Багато хвилюються за результат ЗНО</li>
-                                    <li>Майже завжди утомленні</li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
             </div>
         </div>
     </section>
@@ -203,13 +143,98 @@
                 </div>
                 
             </div>
+            <button data-modal class="button subject__button">Хочу почати</button>
+        </div>
+    </section>
+
+    <section class="about">
+        <div class="container">
+            <h1>З нами навчаються учнi зi всiєї Україны</h1>
+            <h3 class="about__h3">Навайся та виконуй домашнi завдання без помилок за три кроки</h3>
+            <div class="about__tabs">
+                <div class="about__tab ">Крок 1</div>
+                <div class="about__tab">Крок 2</div>
+                <div class="about__tab about__tab_active">Крок 3</div>
+            </div>
+            <div class="about__content">
+                <img class="about__content_img" src="img/photo/learn.jpg">
+                <div class="about__content_main">
+                    <div class="wrapper">
+                        <div class="about__content_maindescr">
+                            <img src="icons/about/youtube.svg">
+                            Теорiя та завдання на плтформi
+                        </div>
+                        <div class="about__content_descr">
+                            Дивись теорію і завдання від наших викладачів на телефоні, комп’ютері або планшеті з будь-якого місця.
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="about__content">
+                <img class="about__content_img" src="img/photo/hand.jpg">
+                <div class="about__content_main">
+                    <div class="wrapper">
+                        <div class="about__content_maindescr">
+                            <img src="icons/about/chek.svg">
+                            Засвой отриманнi знання тестом
+                        </div>
+                        <div class="about__content_descr">
+                            Після заняття відразу переходь до практичних завдань на реальних тестах ЗНО та тестах, які розробляли наші викладачі.
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="about__content">
+                    <img class="about__content_img" src="img/photo/rules.jpg">
+                    <div class="about__content_main">
+                        <div class="wrapper">
+                            <div class="about__content_maindescr">
+                                <img src="icons/about/review.svg">
+                                Чому 94% учнів неефективно готуються до ЗНО?
+ 
+                            </div>
+                            <div class="about__content_descr">
+                                <ul>
+                                    <li>Не можуть побороти свою лінь</li>
+                                    <li>Постійно відволікаються на заважаючі речі</li>
+                                    <li>Багато хвилюються за результат ЗНО</li>
+                                    <li>Майже завжди утомленні</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="use">
+        <h1>Як навчатися з нами? </h1>
+
+        <div class="use__items">
+            <div class="use__items_first">
+                <div class="use__item"></div>
+                <div class="use__item"></div>
+                <div class="use__item"></div>
+                <div class="use__item"></div>
+                <div class="use__item"></div>
+                <div class="use__item"></div>
+            </div>
+
+            <div class="use__items_second">
+                <div class="use__item"></div>
+                <div class="use__item"></div>
+                <div class="use__item"></div>
+                <div class="use__item"></div>
+                <div class="use__item"></div>
+                <div class="use__item"></div>
+            </div>
         </div>
     </section>
 
     <div class="overlay hide">
         <div class="modal">
             <div data-close class="modal__close">&times;</div>
-            <div class="modal__subtitle">Залиш контактні данні та отримай знижку -30%</div>
+            <div class="modal__subtitle">Залиш контактні данні та отримай знижку -30% на пiдготовку до ЗНО</div>
             <form id="promo-form" class="feed-form" action="#">
                 <input name="name" placeholder="Ваше iм'я" type="text">
                 <input name="phone" placeholder="Ваш телефон">
