--- a/index.html
+++ b/index.html
@@ -208,25 +208,111 @@
     </section>
 
     <section class="use">
-        <h1>Як навчатися з нами? </h1>
+        <div class="container">
+            <h1>Як навчатися з нами? </h1>
 
-        <div class="use__items">
-            <div class="use__items_first">
-                <div class="use__item"></div>
-                <div class="use__item"></div>
-                <div class="use__item"></div>
-                <div class="use__item"></div>
-                <div class="use__item"></div>
-                <div class="use__item"></div>
+            <div class="use__items">
+                <div class="use__first">
+                    <div class="use__first_item">
+                        <div class="use__items_round">
+                            <div class="use__items_number">
+                                1
+                            </div>
+                        </div>        
+                    </div>
+                    <div class="use__first_item">
+                        <div class="use__items_descr">
+                            Обирай свій предмет та залишай заявку.
+                        </div>
+                    </div>
+                    <div class="use__first_item">
+                        <div class="use__items_round">
+                            <div class="use__items_number">
+                                2
+                            </div>
+                        </div>       
+                    </div>
+                    <div class="use__first_item">
+                        <div class="use__items_descr">
+                            Разом з менеджером обери<br> предмети для підготовки до ЗНО
+                        </div>
+                    </div>
+                    <div class="use__first_item">
+                        <div class="use__items_round">
+                            <div class="use__items_number">
+                                3
+                            </div>
+                        </div>    
+                    </div>
+                    <div class="use__first_item">
+                        <div class="use__items_descr">
+                            Закріпленний викладач та куратор,<br> який буде з тобою 24/7 на зв’язку
+                        </div>
+                    </div>
+                </div>
+
+                <div class="use__second">
+                    <div class="use__second_item">
+                        <div class="use__items_descr">
+                            Виконуй усі домашні завдання<br> з викладачем та на платформі
+                        </div>
+                    </div>
+                    <div class="use__second_item">
+                        <div class="use__items_round">
+                            <div class="use__items_number">
+                                4
+                            </div>
+                        </div>
+                            
+                    </div>
+                    <div class="use__second_item">
+                        <div class="use__items_descr">
+                            Закріплюй отримані знання тестовим завданням
+                        </div>
+                    </div>
+                    <div class="use__second_item">
+                        <div class="use__items_round">
+                            <div class="use__items_number">
+                                5
+                            </div>
+                        </div>
+                    </div>
+                    <div class="use__second_item">
+                        <div class="use__items_descr">
+                            Гарантовано отримай +20 балів на ЗНО
+                        </div>
+                    </div>
+                    <div class="use__second_item">
+                        <div class="use__items_round">
+                            <div class="use__items_number">
+                                6
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
+        </div>
+    </section>
 
-            <div class="use__items_second">
-                <div class="use__item"></div>
-                <div class="use__item"></div>
-                <div class="use__item"></div>
-                <div class="use__item"></div>
-                <div class="use__item"></div>
-                <div class="use__item"></div>
+    <section class="support">
+        <div class="container">
+            <h1>Підтримка куратора та викладача 24/7/365</h1>
+            <div class="support__content">
+                <div class="support__descr">
+                    <div class="support__descr_subheader">
+                        Чим тобі допоможе куратор та викладач?
+                    </div>
+                    <ul class="support__list">
+                        <li><span>Буде давати завдання затвердженні МОН по ЗНО</span></li>
+                        <li><span>Перевіряти домашні завдання і давати детальний зворотній зв'язок з посиланням на критерії перевірки</span></li>
+                        <li><span>Підтрімувати тебе в складні мементи навчання. Кожен наш куратор щиро хоче тобі допомогти отримати відмінний результат!</span> </li>
+                        <li><span>Відповідати на твої запитання 24/7 в Viber/Telegram/Messenger.</span></li>
+                        <li><span>Зідзвонюватись з тобою і допомагати в виконанні домашніх завдань.</span></li>
+                    </ul>
+                </div>
+                <div class="support__img">
+                    <img src="img/support/woman.jpg">
+                </div>
             </div>
         </div>
     </section>
